--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,8 +3,8 @@
         <img src="../../../assets/images/pokemon_logo2-removebg-preview.png" alt="Pokédex logo from Pokémon.">
     </div>
     <div class="navbar-list">
-        <a>Dracaufeu</a>
-        <a>Florizarre</a>
-        <a>Tortank</a>
+        <a>Get Pokemon</a>
+        <a>Get a place</a>
+        <a>Get evolutions</a>
     </div>
 </div>
