--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -74,7 +74,7 @@
 .top-half, .bottom-half{
     width: 100%;
     height: 50%;
-    background-color: #3c5aa6;
+    background-color: #fff;
 }
 
 /* one of the two div that makes my .top-half or .bottom-half */
@@ -105,7 +105,8 @@
 .shiny{
     height: 20%;
     width: 100%;
-    background-color: gray;
+    background-color: #FF8C7B;
+    color: #fff;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -134,14 +135,20 @@
 .specs{
     width: 100%;
     height: 50%;
-    background-color: #3c5aa6;
+    background-color: #FF8C7B;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
 
 /* container for my pokemon types */
 .types{
     width: 100%;
     height: 30%;
-    background-color: gray;
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .types p{
     font-size: 25px;
@@ -164,4 +171,15 @@
 }
 .specs p{
     font-size: 25px;
+}
+
+
+button#shiny-btn-active {
+    height: 80%;
+    width: 20%;
+    margin-right: 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #ffcb05;
+    background-color: #25242a;
 }
