--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -5,8 +7,9 @@
 }
 
 body{
-    background-color: #25242a;
+    background-image: linear-gradient(to left top, #ffffff, #d4d2e8, #a7a7d1, #767fbc, #3c5aa6);
     width: 100vw;
     height: fit-content;
     margin-bottom: 20rem;
+    font-family: 'Roboto Condensed', sans-serif;
 }
