--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -74,7 +74,7 @@
 .top-half, .bottom-half{
     width: 100%;
     height: 50%;
-    background-color: #fff;
+    background-color: #FF8C7B;
 }
 
 /* one of the two div that makes my .top-half or .bottom-half */
@@ -93,6 +93,9 @@
 .pictures{
     height: 70%;
     width: 100%;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
 }
 
 /* resize of my pokemon pic */
@@ -136,9 +139,11 @@
     width: 100%;
     height: 50%;
     background-color: #FF8C7B;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+}
+
+.specs img{
+    height: 30px;
+    width: auto;
 }
 
 /* container for my pokemon types */
@@ -165,8 +170,7 @@
 
 .specs{
     display: flex;
-    justify-content: center;
-    flex-direction: column;
+    justify-content: space-evenly;
     align-items: center;
 }
 .specs p{
