--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -38,9 +38,9 @@
                 </div>
             </div>
             <div class="specs">
-                <p> atk: {{ pokemon.stats[1].base_stat }}</p>
-                <p> height: {{ pokemon.height }}</p>
-                <p> weight :{{ pokemon.weight }}</p>
+                <p> <img src="../../../assets/images/punch.jpg" alt="attack"> : {{ pokemon.stats[1].base_stat }}</p>
+                <p> <img src="../../../assets/images/icons8-height-64.png" alt="height"> : {{ pokemon.height }}</p> 
+                <p> <img src="../../../assets/images/icons8-poids-(kg-50.png" alt="weight"> :{{ pokemon.weight }}</p>
             </div>
         </div>
    </div>
@@ -79,9 +79,9 @@
                      </div>
                  </div>
                  <div class="specs">
-                     <p> atk: {{ pokemonObject.attack }}</p>
-                     <p> height: {{ pokemonObject.height }}</p>
-                     <p> weight :{{ pokemonObject.weight }}</p>
+                    <p> <img src="../../../assets/images/punch.jpg" alt="attack"> : {{ pokemonObject.stats[1].base_stat }}</p>
+                    <p> <img src="../../../assets/images/icons8-height-64.png" alt="height"> : {{ pokemonObject.height }}</p> 
+                    <p> <img src="../../../assets/images/icons8-poids-(kg-50.png" alt="weight"> :{{ pokemonObject.weight }}</p>
                  </div>
              </div>
         </div>
