--- a/src/app/components/home-page/home-page.component.html
+++ b/src/app/components/home-page/home-page.component.html
@@ -83,6 +83,13 @@
                     <p> <img src="../../../assets/images/icons8-height-64.png" alt="height"> : {{ pokemonObject.height }}</p> 
                     <p> <img src="../../../assets/images/icons8-poids-(kg-50.png" alt="weight"> :{{ pokemonObject.weight }}</p>
                  </div>
+                 <div class="evolutions">
+                    <ul>
+                        <li>1. {{ pokemonObject.name | uppercase}}</li>
+                        <li>2. test</li>
+                        <li>3. test</li>
+                    </ul>
+                 </div>
              </div>
         </div>
      
