--- a/src/app/components/home-page/home-page.component.css
+++ b/src/app/components/home-page/home-page.component.css
@@ -176,6 +176,21 @@
 .specs p{
     font-size: 25px;
 }
+.evolutions{
+    width: 100%;
+    background-color: #3c5aa6;
+    color: #fff;
+}
+.evolutions ul, .evolutions li{
+    text-decoration: none;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
 
 
 button#shiny-btn-active {
