--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <div class="container">
     <div class="logo">
-        <img src="../../../assets/images/pokemon_logo2-removebg-preview.png" alt="Pokédex logo from Pokémon.">
+        <img routerLink="/" src="../../../assets/images/pokemon_logo2-removebg-preview.png" alt="Pokédex logo from Pokémon.">
     </div>
     <div class="navbar-list">
-        <a>Get Pokemon</a>
+        <a routerLink="/">Get Pokemon</a>
         <a>Get a place</a>
         <a>Get evolutions</a>
     </div>
