--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,7 @@
 
 body{
     background-image: linear-gradient(to left top, #ffffff, #d4d2e8, #a7a7d1, #767fbc, #3c5aa6);
-    width: 100vw;
+    width: 100%;
     height: fit-content;
-    margin-bottom: 20rem;
     font-family: 'Roboto Condensed', sans-serif;
 }
