--- a/src/app/components/pokemon-detail/pokemon-detail.component.css
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.css
@@ -10,30 +10,30 @@
 .basic-infos{
     width: 100%;
     height: fit-content;
+    background-color: #FF8C7B;
 }
 .basic-infos h1{
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5%;
-    background-color: #25242a;
     color: #fff;
 }
 
 .types{
     width: 100%;
     height: fit-content;
-    background-color: #fff;
     display: flex;
     justify-content: center;
+    background-color: #fff;
 }
 
 .abilities{
     width: 100%;
     height: fit-content;
     padding: 2% 0 2% 3%;
-    background-color: #25242a;
-    color: #fff;
+    color: #25242a;
+    background-color:#FF8C7B;
 }
 .abilities p{
     font-size: 1.5rem;
@@ -44,9 +44,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #25242a;
     color: #fff;
     padding-bottom: 1.5%;
+    background-color: #FF8C7B;
 }
 .abilities-name p{
     font-size: 1.3rem;
@@ -55,11 +55,11 @@
 .sprites{
     width: 100%;
     height: fit-content;
-    background-color: #fff;
     color: #25242a;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #fff;
 }
 
 .default, .shiny{
@@ -86,7 +86,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: #25242a;
     color: #fff;
 }
 
@@ -110,28 +109,43 @@
     padding: 0 0 1rem 0;
 }
 
-.games{
+.games {
     width: 100%;
     height: fit-content;
-    background-color: #fff;
-    color: #25242a;
-    display: flex;
-    flex-direction: column;
+    background-color:#FF8C7B;
+    display :grid;
+    grid-template-columns: repeat(4 , 20%);
     justify-content: center;
-    align-items: center;
-    padding: 2rem 0 2rem 0;
+    grid-gap: 20px;
+    padding-top: 20px;
+    padding-bottom : 20px;
 }
 
-.games p{
+.game {
+    height: 150px;
+    width: 100%;
+    background-color: #495879;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items : center;
+}
+
+.game-title {
+    width: 100%;
+    height: fit-content;
+    padding: 10px 0 10px 15px;
+    background-color: #FF8C7B;
+}
+
+.game-name {
     font-size: 2rem;
 }
-
-.games>div>p{
-    font-size: 1.5rem;
-}
-
-#logo{
-    height: 75px;
-    width: auto;
+.logo{
+    width: 100%;
+    height: fit-content;
+    background-color: #FF8C7B;
+    padding: 15px 10px;
     cursor: pointer;
 }
