--- a/src/app/components/pokemon-detail/pokemon-detail.component.css
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.css
@@ -10,7 +10,6 @@
 .basic-infos{
     width: 100%;
     height: fit-content;
-    background-color: #FF8C7B;
 }
 .basic-infos h1{
     display: flex;
@@ -32,11 +31,10 @@
     width: 100%;
     height: fit-content;
     padding: 2% 0 2% 3%;
-    color: #25242a;
-    background-color:#FF8C7B;
+    color: #fff;
 }
 .abilities p{
-    font-size: 1.5rem;
+    font-size: 2rem;
 }
 .abilities-name{
     width: 100%;
@@ -46,10 +44,9 @@
     align-items: center;
     color: #fff;
     padding-bottom: 1.5%;
-    background-color: #FF8C7B;
 }
 .abilities-name p{
-    font-size: 1.3rem;
+    font-size: 1.5rem;
 }
 
 .sprites{
@@ -112,7 +109,7 @@
 .games {
     width: 100%;
     height: fit-content;
-    background-color:#FF8C7B;
+    background-color:#fff;
     display :grid;
     grid-template-columns: repeat(4 , 20%);
     justify-content: center;
@@ -124,7 +121,7 @@
 .game {
     height: 150px;
     width: 100%;
-    background-color: #495879;
+    background-color: #25242a;
     color: #fff;
     cursor: pointer;
     display: flex;
@@ -136,7 +133,7 @@
     width: 100%;
     height: fit-content;
     padding: 10px 0 10px 15px;
-    background-color: #FF8C7B;
+    background-color: #fff;
 }
 
 .game-name {
@@ -145,7 +142,11 @@
 .logo{
     width: 100%;
     height: fit-content;
-    background-color: #FF8C7B;
+    background-color: #fff;
     padding: 15px 10px;
     cursor: pointer;
+}
+
+.big-pic{
+    padding: 1.5rem 0 1.5rem 0;
 }
